@@ -750,8 +750,10 @@ void JIT::emit_op_jfalse(Instruction* currentInstruction)
 
     emitLoad(cond, regT1, regT0);
 
-    ASSERT((JSValue::BooleanTag + 1 == JSValue::Int32Tag) && !(JSValue::Int32Tag + 1));
-    addSlowCase(branch32(Below, regT1, TrustedImm32(JSValue::BooleanTag)));
+    Jump isBoolean = branch32(Equal, regT1, TrustedImm32(JSValue::BooleanTag));
+    addSlowCase(branch32(NotEqual, regT1, TrustedImm32(JSValue::Int32Tag)));
+    isBoolean.link(this);
+
     addJump(branchTest32(Zero, regT0), target);
 }
 
@@ -786,8 +788,10 @@ void JIT::emit_op_jtrue(Instruction* currentInstruction)
 
     emitLoad(cond, regT1, regT0);
 
-    ASSERT((JSValue::BooleanTag + 1 == JSValue::Int32Tag) && !(JSValue::Int32Tag + 1));
-    addSlowCase(branch32(Below, regT1, TrustedImm32(JSValue::BooleanTag)));
+    Jump isBoolean = branch32(Equal, regT1, TrustedImm32(JSValue::BooleanTag));
+    addSlowCase(branch32(NotEqual, regT1, TrustedImm32(JSValue::Int32Tag)));
+    isBoolean.link(this);
+
     addJump(branchTest32(NonZero, regT0), target);
 }
 
